feat: seen message (#27)